syntax = "proto3";

package rivet.backend.pkg.mm.lobby_find_fail;

import "proto/common.proto";
import "proto/backend/matchmaker/lobby_find.proto";

message ForceFailContext {
	rivet.common.Uuid namespace_id = 1;
}

message Request {
	reserved 3;

	repeated rivet.common.Uuid query_ids = 1;
	rivet.backend.matchmaker.lobby_find.ErrorCode error_code = 2;

	/// If provided, the query was never inserted in to the database and should
	/// fail without touching the database.
	///
	/// This is useful for errors that are caught before the lobby is
	// / written to the database.
	optional ForceFailContext force_fail = 4;
}

message Response {

}
